# StaffDemo

./: CMakeLists.txt  projects_info.txt  staff_info.txt
include/: Employee.h  Engineer.h  Factory.h  Interfaces.h  Manager.h  Personal.h
src/: Employee.cpp  Engineer.cpp  Factory.cpp  Manager.cpp  Personal.cpp  main.cpp
